force-app/main/default/objects/EMS_TM_Picklist_value__c/EMS_TM_Picklist_value__c.object-meta.xml
<CustomObject>
    <label>Picklist value</label>
    <nameField>
        <label>Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>