force-app/main/default/objects/EMS_TM_Picklist_value__c/fields/EMS_TM_Type__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OOO</fullName>
            </value>
            <value>
                <fullName>Bench</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>assignmentPicklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>