force-app/main/default/objects/EMS_TM_Picklist_value__c/fields/EMS_TM_Value__c.field-meta.xml
<CustomField>
    <fullName>EMS_TM_Value__c</fullName>
    <label>Value</label>
    <length>225</length>
    <type>Text</type>
</CustomField>