force-app/main/default/objects/EMS_TM_Picklist_value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMS_TM_Type__c</columns>
    <columns>EMS_TM_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>